[gd_scene load_steps=20 format=3 uid="uid://qf81iinh5hke"]

[ext_resource type="Script" uid="uid://v1omqd38x1jy" path="res://Scripts/Volcano.gd" id="1_m5bkw"]
[ext_resource type="AudioStream" uid="uid://cm7i1jqvye8j2" path="res://Sounds/disasters/nature/volcano_idle.wav" id="2_1dlfw"]
[ext_resource type="Texture2D" uid="uid://ccekod24udoyv" path="res://Resources/Volcano.tres" id="2_jyw2b"]
[ext_resource type="PackedScene" uid="uid://q6hkv3yre3tn" path="res://Models/Blend Format/Volcano.blend" id="3_tcwv6"]
[ext_resource type="AudioStream" uid="uid://c6lbbct1aom2r" path="res://Sounds/disasters/nature/minivolcano_explosion.mp3" id="3_w7y1d"]
[ext_resource type="Material" uid="uid://jeft7exqnaro" path="res://Resources/lava.tres" id="4_l4up6"]
[ext_resource type="Material" uid="uid://diohginyx0ebc" path="res://Resources/volcano_model.tres" id="5_bbnyp"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_somxg"]
shading_mode = 0
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ep0pk"]
emission_shape = 1
emission_sphere_radius = 60.0
direction = Vector3(0, 1, 0)
spread = 0.0
initial_velocity_max = 150.0
gravity = Vector3(0, 9.8, 0)
scale_max = 15.0
color_ramp = ExtResource("2_jyw2b")
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0
collision_use_scale = true

[sub_resource type="SphereMesh" id="SphereMesh_otd4a"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hycms"]
emission_shape = 1
emission_sphere_radius = 60.0
direction = Vector3(0, 1, 0)
initial_velocity_min = 253.89
initial_velocity_max = 253.89
gravity = Vector3(0, 9.8, 0)
radial_accel_min = 100.0
radial_accel_max = 100.0
tangential_accel_min = -2.23517e-06
tangential_accel_max = -2.23517e-06
scale_max = 15.0
color_ramp = ExtResource("2_jyw2b")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q3pew"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true

[sub_resource type="SphereMesh" id="SphereMesh_tafo1"]
material = SubResource("StandardMaterial3D_q3pew")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_l4up6"]
data = PackedVector3Array(-50, 316.251, 41.652, 50, 310.496, -58.1823, 50, 316.251, 41.652, -50, 316.251, 41.652, -50, 310.496, -58.1823, 50, 310.496, -58.1823, -123.836, 4.4769, 133.584, -88.4545, 214.62, 86.0291, -88.4545, 4.4769, 133.584, -123.836, 4.4769, 133.584, -123.836, 2.4406, 98.2608, -88.4545, 214.62, 86.0291, -123.836, 2.4406, 98.2608, -88.4545, 261.378, 47.8931, -88.4545, 214.62, 86.0291, -123.836, 2.4406, 98.2608, -123.836, 2.3201, 62.8272, -88.4545, 261.378, 47.8931, -123.836, 2.3201, 62.8272, -88.4545, 284.461, 11.1219, -88.4545, 261.378, 47.8931, -123.836, 2.3201, 62.8272, -123.836, 5.4461, 27.2064, -88.4545, 284.461, 11.1219, -123.836, 5.4461, 27.2064, -88.4545, 282.496, -24.2054, -88.4545, 284.461, 11.1219, -123.836, 5.4461, 27.2064, -123.836, 3.4099, -8.1167, -88.4545, 282.496, -24.2054, -123.836, 3.4099, -8.1167, -88.4545, 255.389, -58.0833, -88.4545, 282.496, -24.2054, -123.836, 3.4099, -8.1167, -123.836, -3.7888, -43.1423, -88.4545, 255.389, -58.0833, -123.836, -3.7888, -43.1423, -88.4545, 204.441, -90.5868, -88.4545, 255.389, -58.0833, -123.836, -3.7888, -43.1423, -123.836, -7.7408, -78.355, -88.4545, 204.441, -90.5868, -123.836, -7.7408, -78.355, -88.4545, -9.7771, -113.678, -88.4545, 204.441, -90.5868, -123.836, -7.7408, -78.355, -123.836, -9.7771, -113.678, -88.4545, -9.7771, -113.678, -88.4545, 4.4769, 133.584, -53.0727, 263.4, 83.2171, -53.0727, 6.3927, 133.473, -88.4545, 4.4769, 133.584, -88.4545, 214.62, 86.0291, -53.0727, 263.4, 83.2171, -88.4545, 214.62, 86.0291, -53.0727, 343.86, 43.1382, -53.0727, 263.4, 83.2171, -88.4545, 214.62, 86.0291, -88.4545, 261.378, 47.8931, -53.0727, 343.86, 43.1382, -88.4545, 261.378, 47.8931, -53.0727, 377.001, 5.7871, -53.0727, 343.86, 43.1382, -88.4545, 261.378, 47.8931, -88.4545, 284.461, 11.1219, -53.0727, 377.001, 5.7871, -88.4545, 284.461, 11.1219, -53.0727, 375.078, -29.5425, -53.0727, 377.001, 5.7871, -88.4545, 284.461, 11.1219, -88.4545, 282.496, -24.2054, -53.0727, 375.078, -29.5425, -88.4545, 282.496, -24.2054, -53.0727, 338.109, -62.8519, -53.0727, 375.078, -29.5425, -88.4545, 282.496, -24.2054, -88.4545, 255.389, -58.0833, -53.0727, 338.109, -62.8519, -88.4545, 255.389, -58.0833, -53.0727, 253.397, -93.409, -53.0727, 338.109, -62.8519, -88.4545, 255.389, -58.0833, -88.4545, 204.441, -90.5868, -53.0727, 253.397, -93.409, -88.4545, 204.441, -90.5868, -53.0727, -7.8614, -113.789, -53.0727, 253.397, -93.409, -88.4545, 204.441, -90.5868, -88.4545, -9.7771, -113.678, -53.0727, -7.8614, -113.789, -53.0727, 6.3927, 133.473, -17.6909, 288.419, 81.7748, -17.6909, 11.555, 133.176, -53.0727, 6.3927, 133.473, -53.0727, 263.4, 83.2171, -17.6909, 288.419, 81.7748, -53.0727, 263.4, 83.2171, -17.6909, 378.953, 41.1152, -17.6909, 288.419, 81.7748, -53.0727, 263.4, 83.2171, -53.0727, 343.86, 43.1382, -17.6909, 378.953, 41.1152, -53.0727, 343.86, 43.1382, -53.0727, 377.001, 5.7871, -17.6909, 378.953, 41.1152, -17.6909, 378.953, 41.1152, -53.0727, 377.001, 5.7871, -17.6909, 191.817, 16.4626, -53.0727, 377.001, 5.7871, -17.6909, 189.846, -18.8643, -17.6909, 191.817, 16.4626, -53.0727, 377.001, 5.7871, -53.0727, 375.078, -29.5425, -17.6909, 189.846, -18.8643, -53.0727, 375.078, -29.5425, -53.0727, 338.109, -62.8519, -17.6909, 189.846, -18.8643, -17.6909, 189.846, -18.8643, -53.0727, 338.109, -62.8519, -17.6909, 373.164, -64.8728, -53.0727, 338.109, -62.8519, -17.6909, 278.548, -94.8589, -17.6909, 373.164, -64.8728, -53.0727, 338.109, -62.8519, -53.0727, 253.397, -93.409, -17.6909, 278.548, -94.8589, -53.0727, 253.397, -93.409, -17.6909, -2.699, -114.086, -17.6909, 278.548, -94.8589, -53.0727, 253.397, -93.409, -53.0727, -7.8614, -113.789, -17.6909, -2.699, -114.086, -17.6909, 11.555, 133.176, 17.6909, 288.419, 81.7748, 17.6909, 11.555, 133.176, -17.6909, 11.555, 133.176, -17.6909, 288.419, 81.7748, 17.6909, 288.419, 81.7748, -17.6909, 288.419, 81.7748, 17.6909, 378.953, 41.1152, 17.6909, 288.419, 81.7748, -17.6909, 288.419, 81.7748, -17.6909, 378.953, 41.1152, 17.6909, 378.953, 41.1152, -17.6909, 378.953, 41.1152, 17.6909, 191.817, 16.4626, 17.6909, 378.953, 41.1152, -17.6909, 378.953, 41.1152, -17.6909, 191.817, 16.4626, 17.6909, 191.817, 16.4626, -17.6909, 191.817, 16.4626, 17.6909, 189.846, -18.8643, 17.6909, 191.817, 16.4626, -17.6909, 191.817, 16.4626, -17.6909, 189.846, -18.8643, 17.6909, 189.846, -18.8643, -17.6909, 189.846, -18.8643, 17.6909, 373.164, -64.8728, 17.6909, 189.846, -18.8643, -17.6909, 189.846, -18.8643, -17.6909, 373.164, -64.8728, 17.6909, 373.164, -64.8728, -17.6909, 373.164, -64.8728, 17.6909, 278.548, -94.8589, 17.6909, 373.164, -64.8728, -17.6909, 373.164, -64.8728, -17.6909, 278.548, -94.8589, 17.6909, 278.548, -94.8589, -17.6909, 278.548, -94.8589, 17.6909, -2.699, -114.086, 17.6909, 278.548, -94.8589, -17.6909, 278.548, -94.8589, -17.6909, -2.699, -114.086, 17.6909, -2.699, -114.086, 17.6909, 11.555, 133.176, 53.0727, 263.4, 83.2171, 53.0727, 6.3927, 133.473, 17.6909, 11.555, 133.176, 17.6909, 288.419, 81.7748, 53.0727, 263.4, 83.2171, 17.6909, 288.419, 81.7748, 53.0727, 343.86, 43.1382, 53.0727, 263.4, 83.2171, 17.6909, 288.419, 81.7748, 17.6909, 378.953, 41.1152, 53.0727, 343.86, 43.1382, 17.6909, 378.953, 41.1152, 17.6909, 191.817, 16.4626, 53.0727, 343.86, 43.1382, 53.0727, 343.86, 43.1382, 17.6909, 191.817, 16.4626, 53.0727, 377.001, 5.7871, 17.6909, 191.817, 16.4626, 53.0727, 375.078, -29.5425, 53.0727, 377.001, 5.7871, 17.6909, 191.817, 16.4626, 17.6909, 189.846, -18.8643, 53.0727, 375.078, -29.5425, 17.6909, 189.846, -18.8643, 17.6909, 373.164, -64.8728, 53.0727, 375.078, -29.5425, 53.0727, 375.078, -29.5425, 17.6909, 373.164, -64.8728, 53.0727, 338.109, -62.8519, 17.6909, 373.164, -64.8728, 53.0727, 253.397, -93.409, 53.0727, 338.109, -62.8519, 17.6909, 373.164, -64.8728, 17.6909, 278.548, -94.8589, 53.0727, 253.397, -93.409, 17.6909, 278.548, -94.8589, 53.0727, -7.8614, -113.789, 53.0727, 253.397, -93.409, 17.6909, 278.548, -94.8589, 17.6909, -2.699, -114.086, 53.0727, -7.8614, -113.789, 53.0727, 6.3927, 133.473, 88.4545, 214.62, 86.0291, 88.4545, 4.4769, 133.584, 53.0727, 6.3927, 133.473, 53.0727, 263.4, 83.2171, 88.4545, 214.62, 86.0291, 53.0727, 263.4, 83.2171, 88.4545, 261.378, 47.8931, 88.4545, 214.62, 86.0291, 53.0727, 263.4, 83.2171, 53.0727, 343.86, 43.1382, 88.4545, 261.378, 47.8931, 53.0727, 343.86, 43.1382, 88.4545, 284.461, 11.1219, 88.4545, 261.378, 47.8931, 53.0727, 343.86, 43.1382, 53.0727, 377.001, 5.7871, 88.4545, 284.461, 11.1219, 53.0727, 377.001, 5.7871, 88.4545, 282.496, -24.2054, 88.4545, 284.461, 11.1219, 53.0727, 377.001, 5.7871, 53.0727, 375.078, -29.5425, 88.4545, 282.496, -24.2054, 53.0727, 375.078, -29.5425, 88.4545, 255.389, -58.0833, 88.4545, 282.496, -24.2054, 53.0727, 375.078, -29.5425, 53.0727, 338.109, -62.8519, 88.4545, 255.389, -58.0833, 53.0727, 338.109, -62.8519, 88.4545, 204.441, -90.5868, 88.4545, 255.389, -58.0833, 53.0727, 338.109, -62.8519, 53.0727, 253.397, -93.409, 88.4545, 204.441, -90.5868, 53.0727, 253.397, -93.409, 88.4545, -9.7771, -113.678, 88.4545, 204.441, -90.5868, 53.0727, 253.397, -93.409, 53.0727, -7.8614, -113.789, 88.4545, -9.7771, -113.678, 88.4545, 4.4769, 133.584, 123.836, 2.4406, 98.2608, 123.836, 4.4769, 133.584, 88.4545, 4.4769, 133.584, 88.4545, 214.62, 86.0291, 123.836, 2.4406, 98.2608, 88.4545, 214.62, 86.0291, 123.836, 2.3201, 62.8272, 123.836, 2.4406, 98.2608, 88.4545, 214.62, 86.0291, 88.4545, 261.378, 47.8931, 123.836, 2.3201, 62.8272, 88.4545, 261.378, 47.8931, 123.836, 5.4461, 27.2064, 123.836, 2.3201, 62.8272, 88.4545, 261.378, 47.8931, 88.4545, 284.461, 11.1219, 123.836, 5.4461, 27.2064, 88.4545, 284.461, 11.1219, 123.836, 3.4098, -8.1167, 123.836, 5.4461, 27.2064, 88.4545, 284.461, 11.1219, 88.4545, 282.496, -24.2054, 123.836, 3.4098, -8.1167, 88.4545, 282.496, -24.2054, 123.836, -3.7888, -43.1423, 123.836, 3.4098, -8.1167, 88.4545, 282.496, -24.2054, 88.4545, 255.389, -58.0833, 123.836, -3.7888, -43.1423, 88.4545, 255.389, -58.0833, 123.836, -7.7408, -78.355, 123.836, -3.7888, -43.1423, 88.4545, 255.389, -58.0833, 88.4545, 204.441, -90.5868, 123.836, -7.7408, -78.355, 88.4545, 204.441, -90.5868, 123.836, -9.7771, -113.678, 123.836, -7.7408, -78.355, 88.4545, 204.441, -90.5868, 88.4545, -9.7771, -113.678, 123.836, -9.7771, -113.678, -123.836, 2.4406, 98.2608, -123.836, 5.4461, 27.2064, -123.836, 2.3201, 62.8272, -123.836, 2.4406, 98.2608, -123.836, 3.4099, -8.1167, -123.836, 5.4461, 27.2064, -88.4545, 4.4769, 133.584, -123.836, 2.4406, 98.2608, -123.836, 4.4769, 133.584, -53.0727, 6.3927, 133.473, -123.836, 2.4406, 98.2608, -88.4545, 4.4769, 133.584, -53.0727, 6.3927, 133.473, -123.836, 3.4099, -8.1167, -123.836, 2.4406, 98.2608, -17.6909, 11.555, 133.176, -123.836, 3.4099, -8.1167, -53.0727, 6.3927, 133.473, -17.6909, 11.555, 133.176, -123.836, -7.7408, -78.355, -123.836, 3.4099, -8.1167, -123.836, 3.4099, -8.1167, -123.836, -7.7408, -78.355, -123.836, -3.7888, -43.1423, 53.0727, 6.3927, 133.473, -17.6909, 11.555, 133.176, 17.6909, 11.555, 133.176, 53.0727, 6.3927, 133.473, -123.836, -7.7408, -78.355, -17.6909, 11.555, 133.176, 88.4545, 4.4769, 133.584, -123.836, -7.7408, -78.355, 53.0727, 6.3927, 133.473, -123.836, -7.7408, -78.355, -88.4545, -9.7771, -113.678, -123.836, -9.7771, -113.678, -123.836, -7.7408, -78.355, -53.0727, -7.8614, -113.789, -88.4545, -9.7771, -113.678, -123.836, -7.7408, -78.355, -17.6909, -2.699, -114.086, -53.0727, -7.8614, -113.789, 88.4545, 4.4769, 133.584, -17.6909, -2.699, -114.086, -123.836, -7.7408, -78.355, -17.6909, -2.699, -114.086, 53.0727, -7.8614, -113.789, 17.6909, -2.699, -114.086, 88.4545, 4.4769, 133.584, 53.0727, -7.8614, -113.789, -17.6909, -2.699, -114.086, 53.0727, -7.8614, -113.789, 123.836, -9.7771, -113.678, 88.4545, -9.7771, -113.678, 88.4545, 4.4769, 133.584, 123.836, -9.7771, -113.678, 53.0727, -7.8614, -113.789, 123.836, -9.7771, -113.678, 123.836, -3.7888, -43.1423, 123.836, -7.7408, -78.355, 123.836, -9.7771, -113.678, 88.4545, 4.4769, 133.584, 123.836, -3.7888, -43.1423, 123.836, -3.7888, -43.1423, 88.4545, 4.4769, 133.584, 123.836, 3.4098, -8.1167, 123.836, 3.4098, -8.1167, 88.4545, 4.4769, 133.584, 123.836, 2.3201, 62.8272, 123.836, 3.4098, -8.1167, 123.836, 2.3201, 62.8272, 123.836, 5.4461, 27.2064, 123.836, 2.3201, 62.8272, 88.4545, 4.4769, 133.584, 123.836, 2.4406, 98.2608, 123.836, 2.4406, 98.2608, 88.4545, 4.4769, 133.584, 123.836, 4.4769, 133.584)

[sub_resource type="Animation" id="Animation_v1e02"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:Lava_Level")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [125]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:Pressure")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:IsGoingToErupt")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:IsPressureLeaking")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_coo4b"]
resource_name = "Volcano"
length = 300.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:Lava_Level")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 126.7, 300),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [125, 250, 125]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:Pressure")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 126.7, 300),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 100, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:IsGoingToErupt")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 300),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:IsPressureLeaking")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 300),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4f0xq"]
_data = {
&"RESET": SubResource("Animation_v1e02"),
&"Volcano": SubResource("Animation_coo4b")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_kspno"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:scale")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("Volcano/ref_skeleton/Skeleton3D:position")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("Volcano/ref_skeleton/Skeleton3D:rotation")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath("Volcano/ref_skeleton/Skeleton3D:scale")
properties/5/spawn = true
properties/5/replication_mode = 1

[sub_resource type="SphereShape3D" id="SphereShape3D_lhoig"]
radius = 40.4438

[node name="Volcano" type="StaticBody3D" groups=["Volcano"]]
script = ExtResource("1_m5bkw")

[node name="Smoke" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.30945, 361.779, -21.4574)
material_override = SubResource("StandardMaterial3D_somxg")
amount = 1000
lifetime = 5.0
randomness = 1.0
visibility_aabb = AABB(-0.658692, -1.53968, -0.967607, 1.3916, 3.07936, 1.93521)
process_material = SubResource("ParticleProcessMaterial_ep0pk")
draw_pass_1 = SubResource("SphereMesh_otd4a")

[node name="Erupt" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.58344, 408.84, -19.9021)
emitting = false
amount = 3000
lifetime = 5.0
one_shot = true
explosiveness = 0.5
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_hycms")
draw_pass_1 = SubResource("SphereMesh_tafo1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConcavePolygonShape3D_l4up6")

[node name="Volcano" parent="." instance=ExtResource("3_tcwv6")]

[node name="volcano" parent="Volcano" index="0"]
surface_material_override/0 = ExtResource("4_l4up6")
surface_material_override/1 = ExtResource("5_bbnyp")

[node name="Erupt Sound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 318.367, 0)
stream = ExtResource("3_w7y1d")
volume_db = 80.0
max_distance = 4096.0

[node name="Volcano_Animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4f0xq")
}
autoplay = "Volcano"

[node name="Lava loop" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 180.253, 0)
stream = ExtResource("2_1dlfw")
volume_db = 16.054
autoplay = true
max_distance = 500.0

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_kspno")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.04098, 114.685, 0.212049)
light_color = Color(1, 0.516667, 0, 1)
light_energy = 1000.0
shadow_enabled = true
omni_range = 363.787

[node name="Volcano_Area" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Volcano_Area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 293.014, 0)
shape = SubResource("SphereShape3D_lhoig")

[connection signal="body_entered" from="Volcano_Area" to="." method="_on_volcano_area_body_entered"]
[connection signal="body_exited" from="Volcano_Area" to="." method="_on_volcano_area_body_exited"]

[editable path="Volcano"]
